--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -38,7 +38,7 @@
     "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,253670\n",
     "            ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,645215 ,645730\n",
     "            ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE\n",
-    "srcs_ids = [4993,14504,52994,120265,221349,236839,253214,381336,525310,533185,639720,666224,673175,680119,1070938] # # WD ALL_10-800-LOOSE BB SED# Additional candidates 139480,204419,532554,659787,79477,\n"
+    "srcs_ids = [4993,14504,52994,120265,221349,236839,381336,525310,533185,639720,666224,673175,680119,1070938] # # WD ALL_10-800-LOOSE BB SED# Additional candidates 139480,204419,532554,659787,79477,,253214\n"
    ]
   },
   {
@@ -116,12 +116,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e126de7b6fd54d9a881435ccff86d90e",
+       "model_id": "7bf6a96753e74c6cb113d0a8650bb563",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 14504, 52994, 120265, 221349, 236839, 2…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 14504, 52994, 120265, 221349, 236839, 3…"
       ]
      },
      "execution_count": 3,
@@ -138,7 +138,7 @@
     "disp_tt_gaiadr3 = ['ogrp',\"Plx_dist\",\"VarFlag\", \"o_Gmag\",'Gmag_abs','BP-RP','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','RV','e_RV',\n",
     "                   'Vbroad','GRVSmag','QSO','Gal','NSS','XPcont','XPsamp','RVS','EpochPh','EpochRV','MCMCGSP','MCMCMSC','And','Teff','logg','__Fe_H_','Dist','A0','HIP','PS1','SDSS13','SKYM2','TYC2','URAT1','AllWISE','APASS9',\n",
     "                   'GSC23','RAVE5','_2MASS','RAVE6','RAJ2000','DEJ2000','PQSO','PGal','PSS','RPlx','match_distance','gaiadr3_match_id'] #,'_q',,'rg_src_id'\n",
-    "dd_tab_col = {\"tt_sources\":disp_tt_sources, \"tt_simbad\":disp_tt_simbad, \"tt_gaiadr3\":disp_tt_gaiadr3}\n",
+    "dd_tab_col = {\"tt_sources\":disp_tt_sources, \"tt_simbad\":disp_tt_simbad, \"tt_gaiadr3\":disp_tt_gaiadr3, \"tt_fields\":[],\"tt_gphoton_stats\":[], \"tt_gphoton_lc\":[]}\n",
     "\n",
     "\n",
     "def display_src_info(rg_src_id=0):\n",
@@ -175,10 +175,10 @@
     "    for table_name, col_names in dd_tab_col.items():\n",
     "        if table_name in tc_src._table_names:\n",
     "            print(\"\\n\",table_name,\":\")\n",
-    "            display(tc_src.__dict__[table_name][col_names])\n",
-    "    display(tc_src.tt_fields)\n",
-    "\n",
-    "\n",
+    "            if len(col_names)==0:\n",
+    "                display(tc_src.__dict__[table_name])\n",
+    "            else:\n",
+    "                display(tc_src.__dict__[table_name][col_names])\n",
     "    \n",
     "    #tc_src.tt_sed.pprint_all()\n",
     "\n",
@@ -207,12 +207,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67af695b76f04b5097afbaeac9aae251",
+       "model_id": "33c8c6ee5c464f09bdbeae4675608c92",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='block_nr', max=3), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=1, description='block_nr', max=2), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
@@ -387,8 +387,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dfbcff50-c3f0-45ba-adab-d2e915c017ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.49198356863033"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "37*1.4997833396927116"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f111706-fb48-4292-ace3-de526b54686e",
    "metadata": {},
    "outputs": [],
    "source": []
