--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "region_name = \"ALL_10-800_LOOSE\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
+    "region_name = \"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "show_skymaps = False\n",
     "show_sed = True\n",
@@ -33,13 +33,14 @@
     "load_src_from_file = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
-    "#srcs_ids = [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
     "srcs_ids = []\n",
     "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,253670\n",
     "            ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,645215 ,645730\n",
     "            ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE\n",
     "#srcs_ids = [4993,14504,52994,120265,221349,236839,381336,525310,533185,639720,666224,673175,680119,1070938] # # WD ALL_10-800-LOOSE BB SED# Additional candidates 139480,204419,532554,659787,79477,,253214\n",
-    "#srcs_ids = [14504,52994,221349,639720,666224]  # # WD ALL_10-800-LOOSE BB SED, gphot agree\n"
+    "#srcs_ids = [14504,52994,221349,639720,666224]  # # WD ALL_10-800-LOOSE BB SED, gphot agree\n",
+    "srcs_ids = [193067 ,432606 ,535864 ,451644 ,1551422 ,541266 ,581995 ,625693 ,187856 ,8215 ,494782 ,166179 ,172775 ,34658 ,98746 ,\n",
+    "            1521738 ,2136829 ,297278 ,426363 ,426330 ,151796 ,305192 ,259271 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,199832 ,]# WD ALL_10-800"
    ]
   },
   {
@@ -52,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 10413 selected: 10413\n"
+      "Nr sources: 8376 selected: 8376\n"
      ]
     }
    ],
@@ -117,12 +118,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37d03583b09d418fae2ef19649d7f155",
+       "model_id": "39ecf10102d74c17b1158b52a3d77210",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 52994, 7947…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(193067, 432606, 535864, 451644, 1551422, 5412…"
       ]
      },
      "execution_count": 3,
@@ -208,12 +209,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "498fdd409ab54d33a469d1d2e980e21e",
+       "model_id": "0071d2b364234d83a5c917cf2230dc19",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=4, description='block_nr', max=9), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=3, description='block_nr', max=6), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
