--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -42,7 +42,8 @@
     "#srcs_ids = [193067 ,432606 ,535864 ,451644 ,1551422 ,541266 ,581995 ,625693 ,187856 ,8215 ,494782 ,166179 ,172775 ,34658 ,98746 ,\n",
     "#            1521738 ,2136829 ,297278 ,426363 ,426330 ,151796 ,305192 ,259271 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,199832 ,]# WD ALL_10-800\n",
     "srcs_ids = [535864 ,451644 ,541266 ,625693 ,494782 ,166179 ,172775 ,34658 ,98746 ,1521738 ,2136829 ,426363 ,426330 ,151796 ,305192 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,]# WD ALL_10-800\n",
-    "srcs_ids = [535864 ,451644 ,541266 ,581995 ,187856 ,166179 ,34658 ,426363 ,151796 ,259271 ,419001 ,25273 ,]"
+    "srcs_ids = [535864 ,451644 ,541266 ,581995 ,187856 ,166179 ,34658 ,426363 ,151796 ,259271 ,419001 ,25273 ,]\n",
+    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]"
    ]
   },
   {
@@ -55,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 8376 selected: 8376\n"
+      "Nr sources: 4202 selected: 4202\n"
      ]
     }
    ],
@@ -120,12 +121,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64d562dd65404247bce8ff1ce94bfffe",
+       "model_id": "bf311791fa324cf3a20bfd14d743f46e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(535864, 451644, 541266, 581995, 187856, 16617…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 407685, 322799, 94932, 99675, 87105),…"
       ]
      },
      "execution_count": 3,
@@ -211,12 +212,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8e603600a0a4877858f61bafc19cffb",
+       "model_id": "7e9c99c773b54b5a9e370ecdd284b0ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='block_nr', max=2), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='block_nr', max=1), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
